--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+      "react/prop-types": "off",
+      "jsx-a11y/no-static-element-interactions": "off",
       "import/prefer-default-export": "off",
       "prettier/prettier": "error",
       "camelcase": "off",
