--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
 version: '3.7'
 services:
-    app:
-        container_name: dockerized-react-app
-        build:
-            context: .
-            dockerfile: Dockerfile
-        volumes:
-            - '.:/app'
-            - '/app/node_modules'
-        ports:
-            - '3001:3000'
-        environment:
-            - NODE_ENV=development
+  nginx-react:
+    container_name: ngixreactapp
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
+    environment:
+      NODE_ENV: production
