--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   nginx-react:
-    container_name: ngixreactapp
+    container_name: nginxreactapp
     build:
       context: .
       dockerfile: Dockerfile
